src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVMeshShader_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVMeshShader_StringErrorContext.class */
public final class NVMeshShader_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glDrawMeshTasksNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVMeshShaderErrorContext");
        methods.put("glDrawMeshTasksIndirectNV(J)V", "net/labymod/core/laby3d/opengl/error/generated/NVMeshShaderErrorContext");
        methods.put("glMultiDrawMeshTasksIndirectNV(JII)V", "net/labymod/core/laby3d/opengl/error/generated/NVMeshShaderErrorContext");
        methods.put("glMultiDrawMeshTasksIndirectCountNV(JJII)V", "net/labymod/core/laby3d/opengl/error/generated/NVMeshShaderErrorContext");
        return methods;
    }
}
